notes from wk 3

--- a/students/alxsmith.html
+++ b/students/alxsmith.html
@@ -80,7 +80,7 @@ img {
 
 <div id="organization" class="section level2">
 <h2>Organization</h2>
-<p><a href="http://github.com/fishmgt">Fisheries Managment</a></p>
+<p><a href="fishmgt.github.io/index.html">Fisheries Managment</a></p>
 <p><span class="citation">@fishmgt</span></p>
 </div>
 <div id="check-out-this-beautiful-sea-cucumber" class="section level2">
