"dplyr, readr" -> "dplyr, tidyr"

--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -442,7 +442,7 @@ co2 = read_excel(xls, skip=12)</code></pre>
 <div id="data-wrangling-in-r" class="section level3">
 <h3>Data Wrangling in R</h3>
 <ul>
-<li><a href="{{%20site.baseurl%20}}/refs/cheatsheets/data-wrangling-cheatsheet.pdf">Data Wrangling (dplyr, readr) cheat sheet</a></li>
+<li><a href="{{%20site.baseurl%20}}/refs/cheatsheets/data-wrangling-cheatsheet.pdf">Data Wrangling (dplyr, tidyr) cheat sheet</a></li>
 <li><a href="wrangling-webinar.pdf" class="uri">wrangling-webinar.pdf</a></li>
 </ul>
 </div>
