--- a/wk03_dplyr.html
+++ b/wk03_dplyr.html
@@ -101,14 +101,14 @@ code {
   color: inherit;
   background-color: rgba(0, 0, 0, 0.04);
 }
-img { 
-  max-width:100%; 
-  height: auto; 
+img {
+  max-width:100%;
+  height: auto;
 }
 </style>
 <div class="container-fluid main-container">
 
-<!--- https://codepo8.github.io/css-fork-on-github-ribbon/ 
+<!--- https://codepo8.github.io/css-fork-on-github-ribbon/
 <style>#forkongithub a{background:#000;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:#c11;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:800px){#forkongithub{position:fixed;display:block;top:0;left:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#forkongithub a{width:200px;position:absolute;top:60px;left:-60px;transform:rotate(-45deg);-webkit-transform:rotate(-45deg);-ms-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}</style><span id="forkongithub"><a href="https://github.com/ucsb-bren/env-info">Fork me on GitHub</a></span>
 -->
 <div class="row-fluid">
@@ -297,7 +297,7 @@ summary(d)</code></pre>
 <h3>Multiple Variables</h3>
 <p>Now let’s approach this code sequentially using base functions, ie natively loaded functions in R without need for additional libraries.</p>
 <pre class="r"><code># read in csv
-surveys = read.csv(&#39;../data/r-ecology/surveys.csv&#39;) 
+surveys = read.csv(&#39;../data/r-ecology/surveys.csv&#39;)
 
 # view data
 head(surveys)
@@ -321,7 +321,7 @@ write.csv(surveys_4, &#39;data/surveys_bbest.csv&#39;, row.names = FALSE)</code>
 <h3>Nested Functions</h3>
 <p>Another common programming trick to reduce variable naming space is to nest the output of one function as the input of the next one.</p>
 <pre class="r"><code># read in data
-surveys = read.csv(&#39;../data/r-ecology/surveys.csv&#39;) 
+surveys = read.csv(&#39;../data/r-ecology/surveys.csv&#39;)
 
 # view data
 head(surveys)
@@ -330,9 +330,9 @@ summary(surveys)
 # limit data with [], aggregate to count, write to csv
 write.csv(
   aggregate(
-    species_id ~ year, 
-    data = surveys[surveys_2$species_id  == &#39;NL&#39;, c(&#39;species_id&#39;, &#39;year&#39;)], 
-    FUN = &#39;length&#39;), 
+    species_id ~ year,
+    data = surveys[surveys_2$species_id  == &#39;NL&#39;, c(&#39;species_id&#39;, &#39;year&#39;)],
+    FUN = &#39;length&#39;),
   &#39;data/surveys_bbest.csv&#39;,
   row.names = FALSE)</code></pre>
 <p>So the code started the same, and continues using the same functions, but these functions get applied from the input arguments to the outer containing functions, ie in a nested manner:</p>
@@ -351,7 +351,7 @@ library(readr)
 library(dplyr)
 
 # read in csv
-surveys = read_csv(&#39;../data/r-ecology/surveys.csv&#39;) 
+surveys = read_csv(&#39;../data/r-ecology/surveys.csv&#39;)
 
 # dplyr elegance
 surveys %T&gt;%                          # note tee operator %T&gt;% for glimpse
@@ -399,7 +399,7 @@ surveys %T&gt;%                          # note tee operator %T&gt;% for glimpse
 <div id="data-wrangling-in-r" class="section level3">
 <h3>Data Wrangling in R</h3>
 <ul>
-<li><a href="{{%20site.baseurl%20}}/refs/cheatsheets/data-wrangling-cheatsheet.pdf">Data Wrangling (dplyr, readr) cheat sheet</a></li>
+<li><a href="{{%20site.baseurl%20}}/refs/cheatsheets/data-wrangling-cheatsheet.pdf">Data Wrangling (dplyr, tidyr) cheat sheet</a></li>
 <li><a href="wrangling-webinar.pdf" class="uri">wrangling-webinar.pdf</a></li>
 </ul>
 </div>
