wk04 precursors, wording

--- a/wk04_tidyr.html
+++ b/wk04_tidyr.html
@@ -147,12 +147,20 @@ img {
 <div id="header">
 <h1 class="title">Week 4: Tidying up Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-28 16:23</em></h4>
+<h4 class="date"><em>2016-01-28 16:37</em></h4>
 </div>
 
 
 <div id="precursors" class="section level2">
 <h2>Precursors</h2>
+<div id="final-project" class="section level3">
+<h3>Final Project</h3>
+<p>The instructions for your class group’s <a href="./#final-project">Final Project</a> have been updated.</p>
+</div>
+<div id="schedule" class="section level3">
+<h3>Schedule</h3>
+<p>The class for week 9 on March 4th conflicts with the <a href="http://www.bren.ucsb.edu/research/gp_submit.html">Bren Group Project</a> presentations, so we’ll be extending the classes before and after by 1 hour.</p>
+</div>
 <div id="invitations" class="section level3">
 <h3>Invitations</h3>
 <ul>
@@ -177,7 +185,7 @@ d = read.csv(&#39;../data/r-ecology/surveys.csv&#39;) # ../data is sibling of st
 </div>
 <div id="assignment-individual" class="section level3">
 <h3>Assignment (Individual)</h3>
-<p>For the data wrangling portion of today, append the header <code>## 4. Tidying up Data</code> to your <code>env-info/students/&lt;user&gt;.Rmd</code> and include R chunks to run the demo and exercise in <a href="../wk04_tidyr.html"><strong>wk04_tidyr</strong></a>. You’ll find it easiest to copy and paste the demo portion from <a href="https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk04_tidyr.Rmd"><code>env-info/wk04_tidyr.Rmd</code></a> but will need to understand this material enough to apply the functions to the CO<sub>2</sub> dataset as R chunks and answer all the questions.</p>
+<p>For the data wrangling portion of today, append the header <code>## 4. Tidying up Data</code> to your <code>env-info/students/&lt;user&gt;.Rmd</code> and include R chunks to run the demo below and answer questions. You’ll find it easiest to copy and paste the demo portion from <a href="https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk04_tidyr.Rmd"><code>env-info/wk04_tidyr.Rmd</code></a> but will need to understand this material enough to apply the functions to the CO<sub>2</sub> dataset as R chunks and answer all the questions.</p>
 </div>
 </div>
 <div id="materials" class="section level2">
